[package]
name = "tower-sessions-async-diesel"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
diesel = { version = "2.2.0", default-features = false, features = [
   "time", "returning_clauses_for_sqlite_3_35",
] }
diesel-async = { version = "0.5.1", features = ["deadpool"] }
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.3"
time = "0.3.36"
tower-sessions = { version = "0.13.0", features = ["signed"] }
tower-sessions-core = { version = "0.13.0", features = ["deletion-task"]}

[features]
default = ["sqlite"]
sqlite = ["diesel-async/sqlite"]
